@@ -19,29 +19,22 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Map.Entry;
+import java.util.Map;
 import java.util.Optional;
 
-import com.apicatalog.jsonld.JsonLdError;
-import com.apicatalog.jsonld.JsonLdErrorCode;
-import com.apicatalog.jsonld.context.ActiveContext;
+import com.apicatalog.jsonld.JsonLdException;
+import com.apicatalog.jsonld.JsonLdException.ErrorCode;
+import com.apicatalog.jsonld.Options;
+import com.apicatalog.jsonld.context.Context;
 import com.apicatalog.jsonld.context.TermDefinition;
-import com.apicatalog.jsonld.json.JsonMapBuilder;
-import com.apicatalog.jsonld.json.JsonProvider;
-import com.apicatalog.jsonld.json.JsonUtils;
-import com.apicatalog.jsonld.lang.GraphObject;
+import com.apicatalog.jsonld.expansion.UriExpansion;
 import com.apicatalog.jsonld.lang.Keywords;
-import com.apicatalog.jsonld.lang.ListObject;
-import com.apicatalog.jsonld.lang.NodeObject;
-import com.apicatalog.jsonld.lang.Utils;
-
-import jakarta.json.JsonArray;
-import jakarta.json.JsonArrayBuilder;
-import jakarta.json.JsonObject;
-import jakarta.json.JsonObjectBuilder;
-import jakarta.json.JsonString;
-import jakarta.json.JsonValue;
+import com.apicatalog.jsonld.lang.LdAdapter;
+import com.apicatalog.jsonld.processor.Execution;
+import com.apicatalog.tree.io.java.NativeAdapter;
 
 /**
  *
@@ -59,22 +52,26 @@ public final class Compaction {
             Keywords.VALUE);
 
     // required
-    private final ActiveContext context;
+    private final Context context;
+    private final Options options;
+    private final Execution runtime;
 
     // optional
     private boolean compactArrays;
     private boolean ordered;
 
-    private Compaction(final ActiveContext context) {
+    private Compaction(final Context context, final Options options, final Execution runtime) {
         this.context = context;
+        this.options = options;
+        this.runtime = runtime;
 
         // default values
         this.compactArrays = false;
         this.ordered = false;
     }
 
-    public static Compaction with(final ActiveContext activeContext) {
-        return new Compaction(activeContext);
+    public static Compaction with(final Context activeContext, final Options options, final Execution runtime) {
+        return new Compaction(activeContext, options, runtime);
     }
 
     public Compaction compactArrays(final boolean compactArrays) {
@@ -87,92 +84,106 @@ public final class Compaction {
         return this;
     }
 
-    public JsonValue compact(final JsonValue element) throws JsonLdError {
+    public Object compact(final Object element) throws JsonLdException {
         return compact(null, element);
     }
 
-    public JsonValue compact(final String activeProperty, final JsonValue element) throws JsonLdError {
+    public Object compact(final String activeProperty, final Object element) throws JsonLdException {
+
+        if (element instanceof Collection array) {
+            return compactArray(activeProperty, array);
+        }
+
+        if (element instanceof Map map) {
+            return compactObject(activeProperty, (Map<String, ?>) map);
+        }
+
+        // return scalar
+        return element;
+    }
+
+    public Object compactArray(final String activeProperty, final Collection<?> array) throws JsonLdException {
+
+        final var activePropertyDefinition = context.findTerm(activeProperty);
+
+        // 3.1.
+        final var result = new ArrayList<Object>();
+
+        // 3.2.
+        for (final var item : array) {
+
+            // 3.2.1.
+            final var compactedItem = Compaction
+                    .with(context, options, runtime)
+                    .compactArrays(compactArrays)
+                    .ordered(ordered)
+                    .compact(activeProperty, item);
+
+            // 3.2.2.
+            if (compactedItem != null) {
+                result.add(compactedItem);
+            }
+        }
+
+        // 3.3.
+        if (result.isEmpty()
+                || result.size() > 1
+                || !compactArrays
+                || Keywords.GRAPH.equals(activeProperty)
+                || Keywords.SET.equals(activeProperty)
+                || activePropertyDefinition
+                        .filter(d -> d.hasContainerMapping(Keywords.LIST)
+                                || d.hasContainerMapping(Keywords.SET))
+                        .isPresent()) {
+
+            return result;
+        }
+
+        // 3.4.
+        return result.get(0);
+    }
+
+    public Object compactObject(final String activeProperty, final Map<String, ?> object) throws JsonLdException {
 
         // 1.
-        ActiveContext typeContext = context;
-        ActiveContext activeContext = context;
+        Context typeContext = context;
+        Context activeContext = context;
 
-        // 2.
-        if (JsonUtils.isScalar(element)) {
-            return element;
-        }
-
-        final Optional<TermDefinition> activePropertyDefinition = activeContext.getTerm(activeProperty);
-
-        // 3.
-        if (JsonUtils.isArray(element)) {
-
-            // 3.1.
-            final JsonArrayBuilder resultBuilder = JsonProvider.instance().createArrayBuilder();
-
-            // 3.2.
-            for (final JsonValue item : element.asJsonArray()) {
-
-                // 3.2.1.
-                final JsonValue compactedItem = Compaction
-                        .with(activeContext)
-                        .compactArrays(compactArrays)
-                        .ordered(ordered)
-                        .compact(activeProperty, item);
-                // 3.2.2.
-                if (JsonUtils.isNotNull(compactedItem)) {
-                    resultBuilder.add(compactedItem);
-                }
-            }
-
-            final JsonArray result = resultBuilder.build();
-
-            // 3.3.
-            if (result.isEmpty()
-                    || result.size() > 1
-                    || !compactArrays
-                    || Keywords.GRAPH.equals(activeProperty)
-                    || Keywords.SET.equals(activeProperty)
-                    || activePropertyDefinition
-                            .filter(d -> d.hasContainerMapping(Keywords.LIST) || d.hasContainerMapping(Keywords.SET))
-                            .isPresent()) {
-
-                return result;
-            }
-
-            // 3.4.
-            return result.get(0);
-        }
-
-        // 4.
-        final JsonObject elementObject = element.asJsonObject();
+        final Optional<TermDefinition> activePropertyDefinition = activeContext.findTerm(activeProperty);
 
         // 5.
         if (activeContext.getPreviousContext() != null
-                && !elementObject.containsKey(Keywords.VALUE)
-                && !(elementObject.containsKey(Keywords.ID)
-                        && elementObject.size() == 1)) {
+                && !object.containsKey(Keywords.VALUE)
+                && !(object.containsKey(Keywords.ID)
+                        && object.size() == 1)) {
             activeContext = activeContext.getPreviousContext();
         }
 
         // 6.
+
         if (activePropertyDefinition.map(TermDefinition::getLocalContext).isPresent()) {
 
+            var localContext = activePropertyDefinition.get().getLocalContext();
+
             activeContext = activeContext
-                    .newContext()
+                    .newContext(options.loader(), runtime)
                     .overrideProtected(true)
-                    .create(activePropertyDefinition.get().getLocalContext(),
+                    .build(localContext.node(),
+                            localContext.adapter(),
                             activePropertyDefinition.get().getBaseUrl());
         }
 
         // 7.
-        if ((elementObject.containsKey(Keywords.VALUE)
-                || elementObject.containsKey(Keywords.ID))
-                && (!activeContext.runtime().isRdfStar() || !elementObject.containsKey(Keywords.ANNOTATION))) {
+        if ((object.containsKey(Keywords.VALUE) || object.containsKey(Keywords.ID))
+                && (!options.isRdfStar() || !object.containsKey(Keywords.ANNOTATION))) {
 
-            final JsonValue result = activeContext.valueCompaction().compact(elementObject, activeProperty);
+            final var result = ValueCompaction.compact(
+                    activeContext,
+                    object,
+                    activeProperty,
+                    options);
 
-            if (JsonUtils.isScalar(result)
+            if (result != null && NativeAdapter.instance().type(result).isScalar()
                     || activePropertyDefinition
                             .map(TermDefinition::getTypeMapping)
                             .filter(Keywords.JSON::equals)
@@ -180,79 +191,92 @@ public final class Compaction {
 
                 return result;
             }
-
         }
 
         // 8.
-        if (ListObject.isListObject(element)
+        if (LdAdapter.isList(object)
                 && activePropertyDefinition.filter(d -> d.hasContainerMapping(Keywords.LIST)).isPresent()) {
 
             return Compaction
-                    .with(activeContext)
+                    .with(activeContext, options, runtime)
                     .compactArrays(compactArrays)
                     .ordered(ordered)
-                    .compact(activeProperty, elementObject.get(Keywords.LIST));
+                    .compact(activeProperty, object.get(Keywords.LIST));
         }
 
         // 9.
-        final boolean insideReverse = Keywords.REVERSE.equals(activeProperty);
+        final var insideReverse = Keywords.REVERSE.equals(activeProperty);
 
         // 10.
-        final JsonMapBuilder result = JsonMapBuilder.create();
+        final var result = new LinkedHashMap<String, Object>();
 
         // 11.
-        if (elementObject.containsKey(Keywords.TYPE)) {
+        if (object.containsKey(Keywords.TYPE)) {
 
             final List<String> compactedTypes = new ArrayList<>();
 
-            for (final JsonValue type : JsonUtils.toCollection(elementObject.get(Keywords.TYPE))) {
-                compactedTypes.add(activeContext.uriCompaction().vocab(true).compact(((JsonString) type).getString()));
+            for (final var type : NativeAdapter.asCollection(object.get(Keywords.TYPE))) {
+                compactedTypes.add(UriCompaction.withVocab(
+                        activeContext,
+                        (String) type,
+                        options));
             }
 
             Collections.sort(compactedTypes);
 
-            for (final String term : compactedTypes) {
+            for (final var term : compactedTypes) {
 
-                final Optional<TermDefinition> termDefinition = typeContext.getTerm(term);
+                final var termDefinition = typeContext.findTerm(term).orElse(null);
 
                 // 11.1.
-                if (termDefinition.filter(TermDefinition::hasLocalContext).isPresent()) {
+                if (termDefinition != null && termDefinition.getLocalContext() != null) {
+
+                    final var localContext = termDefinition.getLocalContext();
 
                     activeContext = activeContext
-                            .newContext()
+                            .newContext(options.loader(), runtime)
                             .propagate(false)
-                            .create(termDefinition.get().getLocalContext(), termDefinition.get().getBaseUrl());
+                            .build(
+                                    localContext.node(),
+                                    localContext.adapter(),
+                                    termDefinition.getBaseUrl());
                 }
             }
         }
 
-        // 12.
-        for (final String expandedProperty : Utils.index(elementObject.keySet(), ordered)) {
+        final var keys = ordered
+                ? object.keySet().stream().sorted().iterator()
+                : object.keySet().iterator();
 
-            final JsonValue expandedValue = elementObject.get(expandedProperty);
+        // 12.
+        while (keys.hasNext()) {
+
+            final var expandedProperty = keys.next();
+
+            final var expandedValue = object.get(expandedProperty);
 
             // 12.1.
             if (Keywords.ID.equals(expandedProperty)) {
 
-                JsonValue compactedValue = JsonValue.NULL;
+                Object compactedValue = null;
 
                 // 12.1.1.
-                if (JsonUtils.isString(expandedValue)) {
-                    compactedValue = JsonUtils.toJsonValue(activeContext.uriCompaction().compact(((JsonString) expandedValue).getString()));
+                if (expandedValue instanceof String stringValue) {
+                    compactedValue = UriCompaction.compact(activeContext, stringValue, options);
 
-                    // json-ld-star
-                } else if (activeContext.runtime().isRdfStar() && NodeObject.isEmbeddedNode(expandedValue)) {
-                    compactedValue = Compaction.with(activeContext)
+                    // JSON-LD-star
+                } else if (options.isRdfStar()
+                        && LdAdapter.isEmbedded(expandedValue)) {
+                    compactedValue = Compaction.with(activeContext, options, runtime)
                             .compactArrays(compactArrays)
                             .ordered(ordered)
                             .compact(expandedValue);
                 }
 
-                // 12.1.2.
-                final String alias = activeContext.uriCompaction().vocab(true).compact(expandedProperty);
-
                 // 12.1.3.
-                result.put(alias, compactedValue);
+                result.put(
+                        UriCompaction.withVocab(activeContext, expandedProperty, options),
+                        compactedValue);
 
                 continue;
             }
@@ -260,44 +284,40 @@ public final class Compaction {
             // 12.2.
             if (Keywords.TYPE.equals(expandedProperty)) {
 
-                final JsonValue compactedValue;
+                final Object compactedValue;
 
                 // 12.2.1.
-                if (JsonUtils.isString(expandedValue)) {
-                    compactedValue = JsonUtils.toJsonValue(typeContext.uriCompaction().vocab(true).compact(((JsonString) expandedValue).getString()));
+                if (expandedValue instanceof String stringValue) {
+                    compactedValue = UriCompaction.withVocab(typeContext, stringValue, options);
 
                     // 12.2.2.
-                } else if (JsonUtils.isArray(expandedValue)) {
+                } else if (expandedValue instanceof Collection<?> arrayValue) {
 
                     // 12.2.2.1.
-                    final JsonArrayBuilder compactedArray = JsonProvider.instance().createArrayBuilder();
+                    final var compactedArray = new ArrayList<String>(arrayValue.size());
 
                     // 12.2.2.2.
-                    for (final JsonValue expandedType : expandedValue.asJsonArray()) {
+                    for (final var expandedType : arrayValue) {
 
-                        compactedArray.add(
-                                typeContext
-                                        .uriCompaction()
-                                        .vocab(true)
-                                        .compact(((JsonString) expandedType).getString()));
+                        compactedArray.add(UriCompaction.withVocab(typeContext, (String) expandedType, options));
                     }
 
-                    compactedValue = compactedArray.build();
+                    compactedValue = compactedArray;
 
                 } else {
-                    throw new JsonLdError(JsonLdErrorCode.INVALID_TYPE_VALUE, "@type value is not valid [" + expandedValue + "].");
+                    throw new JsonLdException(ErrorCode.INVALID_TYPE_VALUE, "@type value is not valid [" + expandedValue + "].");
                 }
 
                 // 12.2.3.
-                final String alias = activeContext.uriCompaction().vocab(true).compact(expandedProperty);
+                final var alias = UriCompaction.withVocab(activeContext, expandedProperty, options);
 
                 // 12.2.4.
                 final boolean asArray = !compactArrays
-                        || (activeContext.runtime().isV11()
-                                && activeContext.getTerm(alias).filter(t -> t.hasContainerMapping(Keywords.SET)).isPresent());
+                        || (activeContext.isV11()
+                                && activeContext.findTerm(alias).filter(t -> t.hasContainerMapping(Keywords.SET)).isPresent());
 
                 // 12.2.5.
-                result.add(alias, compactedValue, asArray);
+                LdAdapter.setOrAdd(result, alias, compactedValue, asArray);
 
                 // 12.2.6.
                 continue;
@@ -307,38 +327,40 @@ public final class Compaction {
             if (Keywords.REVERSE.equals(expandedProperty)) {
 
                 // 12.3.1.
-                final JsonObject compactedMap = Compaction
-                        .with(activeContext)
+                final var compactedMap = (Map<String, ?>) Compaction
+                        .with(activeContext, options, runtime)
                         .compactArrays(compactArrays)
                         .ordered(ordered)
-                        .compact(Keywords.REVERSE, expandedValue)
-                        .asJsonObject();
+                        .compact(Keywords.REVERSE, expandedValue);
 
-                JsonObjectBuilder remaining = null;
+                Map<String, Object> remaining = null;
 
                 // 12.3.2.
-                for (final Entry<String, JsonValue> entry : compactedMap.entrySet()) {
+                for (final var entry : compactedMap.entrySet()) {
 
                     // 12.3.2.1.
-                    if (activeContext.getTerm(entry.getKey()).filter(TermDefinition::isReverseProperty).isPresent()) {
+                    if (activeContext
+                            .findTerm(entry.getKey())
+                            .filter(TermDefinition::isReverseProperty)
+                            .isPresent()) {
 
                         // 12.3.2.1.1
                         final boolean asArray = !compactArrays
                                 || activeContext
-                                        .getTerm(entry.getKey())
+                                        .findTerm(entry.getKey())
                                         .filter(td -> td.hasContainerMapping(Keywords.SET))
                                         .isPresent();
 
                         // 12.3.2.1.2.
-                        result.add(entry.getKey(), entry.getValue(), asArray);
+                        LdAdapter.setOrAdd(result, entry.getKey(), entry.getValue(), asArray);
 
                     } else {
 
                         if (remaining == null) {
-                            remaining = JsonProvider.instance().createObjectBuilder();
+                            remaining = new HashMap<>();
                         }
 
-                        remaining.add(entry.getKey(), entry.getValue());
+                        remaining.put(entry.getKey(), entry.getValue());
                     }
 
                 }
@@ -346,11 +368,10 @@ public final class Compaction {
                 // 12.8.3.
                 if (remaining != null) {
 
-                    // 12.8.3.1.
-                    final String alias = activeContext.uriCompaction().vocab(true).compact(Keywords.REVERSE);
-
                     // 12.8.3.2.
-                    result.put(alias, remaining.build());
+                    result.put(
+                            UriCompaction.withVocab(activeContext, Keywords.REVERSE, options),
+                            remaining);
                 }
 
                 // 12.8.4.
@@ -361,14 +382,15 @@ public final class Compaction {
             if (Keywords.PRESERVE.equals(expandedProperty)) {
 
                 // 12.4.1.
-                final JsonValue compactedValue = Compaction
-                        .with(activeContext)
+                final var compactedValue = Compaction
+                        .with(activeContext, options, runtime)
                         .compactArrays(compactArrays)
                         .ordered(ordered)
                         .compact(activeProperty, expandedValue);
 
                 // 12.4.2.
-                if (!JsonUtils.isEmptyArray(compactedValue)) {
+                if (!(compactedValue instanceof Collection array) || !array.isEmpty()) {
+//                if (!JsonUtils.isEmptyArray(compactedValue)) {
                     result.put(Keywords.PRESERVE, compactedValue);
                 }
                 continue;
@@ -382,28 +404,28 @@ public final class Compaction {
                 // 12.6.
             } else if (DILV_KEYWORDS.contains(expandedProperty)) {
 
-                // 12.6.1.
-                final String alias = activeContext.uriCompaction().vocab(true).compact(expandedProperty);
-
                 // 12.6.2.
-                result.put(alias, expandedValue);
+                result.put(
+                        UriCompaction.withVocab(activeContext, expandedProperty, options),
+                        expandedValue);
 
                 continue;
             }
 
             // 12.7.
-            if (JsonUtils.isEmptyArray(expandedValue)) {
+            if (expandedValue instanceof Collection<?> array && array.isEmpty()) {
 
                 // 12.7.1.
-                final String itemActiveProperty = activeContext
-                        .uriCompaction()
-                        .value(expandedValue)
-                        .vocab(true)
-                        .reverse(insideReverse)
-                        .compact(expandedProperty);
+                final var itemActiveProperty = UriCompaction.withVocab(
+                        activeContext,
+                        expandedProperty,
+                        expandedValue,
+                        insideReverse,
+                        options);
+
                 // 12.7.2.
                 final Optional<String> nestProperty = activeContext
-                        .getTerm(itemActiveProperty)
+                        .findTerm(itemActiveProperty)
                         .map(TermDefinition::getNestValue);
 
                 if (nestProperty.isPresent()) {
@@ -411,37 +433,46 @@ public final class Compaction {
                     final String nestTerm = nestProperty.get();
 
                     // 12.7.2.1.
-                    if (!Keywords.NEST.equals(nestTerm) && !Keywords.NEST.equals(activeContext.uriExpansion().vocab(true).expand(nestTerm))) {
-                        throw new JsonLdError(JsonLdErrorCode.INVALID_KEYWORD_NEST_VALUE);
+                    if (!Keywords.NEST.equals(nestTerm)
+                            && !Keywords.NEST.equals(
+                                    UriExpansion.with(activeContext, options.loader(), runtime)
+                                            .vocab(true)
+                                            .expand(nestTerm))) {
+                        throw new JsonLdException(ErrorCode.INVALID_KEYWORD_NEST_VALUE);
                     }
 
                     // 12.7.2.3.
-                    result.getMapBuilder(nestTerm).add(itemActiveProperty, JsonValue.EMPTY_JSON_ARRAY);
+                    LdAdapter.setOrAdd(
+                            (Map<String, Object>) result.computeIfAbsent(nestTerm, k -> new LinkedHashMap<String, Object>()),
+                            itemActiveProperty,
+                            List.of());
+
+//                    result.getMapBuilder(nestTerm).add(itemActiveProperty, List.of());
 
                     // 12.7.3.
                 } else {
-                    result.add(itemActiveProperty, JsonValue.EMPTY_JSON_ARRAY);
+                    LdAdapter.setOrAdd(result, itemActiveProperty, List.of());
                 }
 
             }
 
             // 12.8.
-            for (final JsonValue expandedItem : expandedValue.asJsonArray()) {
+            for (final var expandedItem : (Collection<?>) expandedValue) {
 
                 // 12.8.1.
-                final String itemActiveProperty = activeContext
-                        .uriCompaction()
-                        .value(expandedItem)
-                        .vocab(true)
-                        .reverse(insideReverse)
-                        .compact(expandedProperty);
+                final var itemActiveProperty = UriCompaction.withVocab(
+                        activeContext,
+                        expandedProperty,
+                        expandedItem,
+                        insideReverse,
+                        options);
 
-                JsonMapBuilder nestResult = null;
+                Map<String, Object> nestResult = null;
                 String nestResultKey = null;
 
                 // 12.8.2.
                 final Optional<String> nestProperty = activeContext
-                        .getTerm(itemActiveProperty)
+                        .findTerm(itemActiveProperty)
                         .map(TermDefinition::getNestValue);
 
                 if (nestProperty.isPresent()) {
@@ -449,12 +480,18 @@ public final class Compaction {
                     final String nestTerm = nestProperty.get();
 
                     // 12.8.2.1.
-                    if (!Keywords.NEST.equals(nestTerm) && !Keywords.NEST.equals(activeContext.uriExpansion().vocab(true).expand(nestTerm))) {
-                        throw new JsonLdError(JsonLdErrorCode.INVALID_KEYWORD_NEST_VALUE);
+                    if (!Keywords.NEST.equals(nestTerm)
+                            && !Keywords.NEST.equals(
+                                    UriExpansion.with(activeContext, options.loader(), runtime)
+                                            .vocab(true)
+                                            .expand(nestTerm))) {
+                        throw new JsonLdException(ErrorCode.INVALID_KEYWORD_NEST_VALUE);
                     }
 
                     // 12.8.2.3.
-                    nestResult = result.getMapBuilder(nestTerm);
+                    // TODO ?!?!?
+                    nestResult = (Map<String, Object>) result.computeIfAbsent(nestTerm, k -> new LinkedHashMap<>());
+//                    nestResult = result.getMapBuilder(nestTerm);                    
                     nestResultKey = nestTerm;
 
                     // 12.8.3.
@@ -464,9 +501,9 @@ public final class Compaction {
 
                 // 12.8.4.
                 final Collection<String> container = activeContext
-                        .getTerm(itemActiveProperty)
+                        .findTerm(itemActiveProperty)
                         .map(TermDefinition::getContainerMapping)
-                        .orElseGet(() -> Collections.emptyList());
+                        .orElse(List.of());
 
                 // 12.8.5.
                 final boolean asArray = container.contains(Keywords.SET)
@@ -475,47 +512,52 @@ public final class Compaction {
                         || !compactArrays;
 
                 // 12.8.6.
-                JsonValue expandedItemValue = expandedItem;
+                var expandedItemValue = expandedItem;
 
-                if (ListObject.isListObject(expandedItem)) {
-                    expandedItemValue = expandedItem.asJsonObject().get(Keywords.LIST);
+                if (expandedItem instanceof Map map) {
+                    if (LdAdapter.isList(map)) {
+                        expandedItemValue = map.get(Keywords.LIST);
 
-                } else if (GraphObject.isGraphObject(expandedItem)) {
-                    expandedItemValue = expandedItem.asJsonObject().get(Keywords.GRAPH);
+                    } else if (LdAdapter.isGraph(map)) {
+                        expandedItemValue = map.get(Keywords.GRAPH);
+                    }
                 }
 
-                JsonValue compactedItem = Compaction
-                        .with(activeContext)
+                Object compactedItem = Compaction
+                        .with(activeContext, options, runtime)
                         .compactArrays(compactArrays)
                         .ordered(ordered)
                         .compact(itemActiveProperty, expandedItemValue);
 
                 // 12.8.7.
-                if (ListObject.isListObject(expandedItem)) {
+                if (expandedItem instanceof Map expandedItemMap
+                        && LdAdapter.isList(expandedItemMap)) {
 
                     // 12.8.7.1.
-                    compactedItem = JsonUtils.toJsonArray(compactedItem);
+                    compactedItem = NativeAdapter.asCollection(compactedItem);
 
                     // 12.8.7.2.
                     if (!container.contains(Keywords.LIST)) {
 
                         // 12.8.7.2.1.
-                        String key = activeContext.uriCompaction().vocab(true).compact(Keywords.LIST);
-
-                        compactedItem = JsonProvider.instance().createObjectBuilder().add(key, compactedItem).build();
+                        final var key = UriCompaction.withVocab(activeContext, Keywords.LIST, options);
 
                         // 12.8.7.2.2.
-                        if (JsonUtils.containsKey(expandedItem, Keywords.INDEX)) {
+                        if (expandedItemMap.containsKey(Keywords.INDEX)) {
 
-                            String indexKey = activeContext.uriCompaction().vocab(true).compact(Keywords.INDEX);
+                            final var indexKey = UriCompaction.withVocab(activeContext, Keywords.INDEX, options);
 
-                            compactedItem = JsonProvider.instance().createObjectBuilder(compactedItem.asJsonObject())
-                                    .add(indexKey, expandedItem.asJsonObject().get(Keywords.INDEX))
-                                    .build();
+                            compactedItem = Map.of(
+                                    key, compactedItem,
+                                    indexKey, expandedItemMap.get(Keywords.INDEX));
+
+                        } else {
+                            compactedItem = Map.of(key, compactedItem);
+
                         }
 
                         // 12.8.7.2.3.
-                        nestResult.add(itemActiveProperty, compactedItem, asArray);
+                        LdAdapter.setOrAdd(nestResult, itemActiveProperty, compactedItem, asArray);
 
                         // 12.8.7.3.
                     } else {
@@ -523,7 +565,7 @@ public final class Compaction {
                     }
 
                     // 12.8.8.
-                } else if (GraphObject.isGraphObject(expandedItem)) {
+                } else if (expandedItem instanceof Map expandedItemMap && LdAdapter.isGraph(expandedItemMap)) {
 
                     boolean followup = false;
 
@@ -533,46 +575,61 @@ public final class Compaction {
                         // 12.8.8.1.2.
                         String mapKey = null;
 
-                        if (expandedItem.asJsonObject().containsKey(Keywords.ID)) {
-                            String id = expandedItem.asJsonObject().getString(Keywords.ID);
-                            mapKey = activeContext.uriCompaction().compact(id);
+                        var id = expandedItemMap.get(Keywords.ID);
+
+                        if (id instanceof String idString) {
+
+                            mapKey = UriCompaction.compact(activeContext, idString, options);
+
+                        } else if (id == null) {
+                            mapKey = UriCompaction.withVocab(activeContext, Keywords.NONE, options);
 
                         } else {
-                            mapKey = activeContext.uriCompaction().vocab(true).compact(Keywords.NONE);
+                            throw new IllegalStateException();
                         }
 
                         // 12.8.8.1.3.
-                        nestResult.getMapBuilder(itemActiveProperty).add(mapKey, compactedItem, asArray);
+//                        nestResult.getMapBuilder(itemActiveProperty).add(mapKey, compactedItem, asArray);
+
+                        LdAdapter.setOrAdd(
+                                (Map<String, Object>) nestResult.computeIfAbsent(itemActiveProperty, k -> new LinkedHashMap<String, Object>()),
+                                mapKey,
+                                compactedItem,
+                                asArray);
 
                         // 12.8.8.2.
                     } else if (container.contains(Keywords.GRAPH)
                             && container.contains(Keywords.INDEX)
-                            && GraphObject.isSimpleGraphObject(expandedItem)) {
+                            && LdAdapter.isSimpleGraph(expandedItemMap)) {
 
                         // 12.8.8.2.2.
-                        final String mapKey = expandedItem.asJsonObject().containsKey(Keywords.INDEX)
-                                ? expandedItem.asJsonObject().getString(Keywords.INDEX)
+                        final String mapKey = expandedItemMap.containsKey(Keywords.INDEX)
+                                ? (String) expandedItemMap.get(Keywords.INDEX)
                                 : Keywords.NONE;
 
                         // 12.8.8.2.3.
-                        nestResult.getMapBuilder(itemActiveProperty).add(mapKey, compactedItem, asArray);
+//                        nestResult.getMapBuilder(itemActiveProperty).add(mapKey, compactedItem, asArray);
+
+                        LdAdapter.setOrAdd(
+                                (Map<String, Object>) nestResult
+                                        .computeIfAbsent(itemActiveProperty, k -> new LinkedHashMap<String, Object>()),
+                                mapKey,
+                                compactedItem,
+                                asArray);
 
                         // 12.8.8.3.
                     } else if (container.contains(Keywords.GRAPH)
-                            && GraphObject.isSimpleGraphObject(expandedItem)) {
+                            && LdAdapter.isSimpleGraph(expandedItemMap)) {
 
                         // 12.8.8.3.1.
-                        if (JsonUtils.isArray(compactedItem) && compactedItem.asJsonArray().size() > 1) {
-                            compactedItem = JsonProvider.instance().createObjectBuilder().add(
-                                    activeContext
-                                            .uriCompaction()
-                                            .vocab(true)
-                                            .compact(Keywords.INCLUDED),
-                                    compactedItem).build();
+                        if (compactedItem instanceof Collection array && array.size() > 1) {
+                            compactedItem = Map.of(
+                                    UriCompaction.withVocab(activeContext, Keywords.INCLUDED, options),
+                                    compactedItem);
                         }
 
                         // 12.8.8.3.2.
-                        nestResult.add(itemActiveProperty, compactedItem, asArray);
+                        LdAdapter.setOrAdd(nestResult, itemActiveProperty, compactedItem, asArray);
 
                     } else {
                         followup = true;
@@ -580,43 +637,38 @@ public final class Compaction {
 
                     // 12.8.8.4.
                     if (!container.contains(Keywords.GRAPH) || followup) {
-                        // 12.8.8.4.1.
-                        compactedItem = JsonProvider.instance().createObjectBuilder().add(
-                                activeContext
-                                        .uriCompaction()
-                                        .vocab(true)
-                                        .compact(Keywords.GRAPH),
-                                compactedItem).build();
+
+                        final Map<String, Object> compactedItemMap;
 
                         // 12.8.8.4.2.
-                        if (expandedItem.asJsonObject().containsKey(Keywords.ID)) {
+                        if (expandedItemMap.containsKey(Keywords.ID)) {
+                            compactedItemMap = Map.of(
+                                    UriCompaction.withVocab(activeContext, Keywords.GRAPH, options),
+                                    compactedItem,
+                                    UriCompaction.withVocab(activeContext, Keywords.ID, options),
+                                    UriCompaction.compact(activeContext, (String) expandedItemMap.get(Keywords.ID), options));
 
-                            compactedItem = JsonProvider.instance().createObjectBuilder(compactedItem.asJsonObject()).add(
-                                    activeContext
-                                            .uriCompaction()
-                                            .vocab(true)
-                                            .compact(Keywords.ID),
-
-                                    activeContext
-                                            .uriCompaction()
-                                            .compact(expandedItem.asJsonObject().getString(Keywords.ID))
-
-                            ).build();
+                        } else {
+                            // 12.8.8.4.1.
+                            compactedItemMap = Map.of(
+                                    UriCompaction.withVocab(activeContext, Keywords.GRAPH, options),
+                                    compactedItem);
                         }
 
-                        // 12.8.8.4.3.
-                        if (expandedItem.asJsonObject().containsKey(Keywords.INDEX)) {
+                        compactedItem = compactedItemMap;
 
-                            compactedItem = JsonProvider.instance().createObjectBuilder(compactedItem.asJsonObject()).add(
-                                    activeContext
-                                            .uriCompaction()
-                                            .vocab(true)
-                                            .compact(Keywords.INDEX),
-                                    expandedItem.asJsonObject().getString(Keywords.INDEX)).build();
+                        // 12.8.8.4.3.
+                        if (expandedItemMap.containsKey(Keywords.INDEX)) {
+
+                            var map = new LinkedHashMap<>(compactedItemMap);
+                            map.put(UriCompaction.withVocab(activeContext, Keywords.INDEX, options),
+                                    (String) expandedItemMap.get(Keywords.INDEX));
+
+                            compactedItem = map;
                         }
 
                         // 12.8.8.4.4.
-                        nestResult.add(itemActiveProperty, compactedItem, asArray);
+                        LdAdapter.setOrAdd(nestResult, itemActiveProperty, compactedItem, asArray);
                     }
 
                     // 12.8.9.
@@ -642,11 +694,11 @@ public final class Compaction {
                         keyToCompact = Keywords.TYPE;
                     }
 
-                    String containerKey = activeContext.uriCompaction().vocab(true).compact(keyToCompact);
+                    var containerKey = UriCompaction.withVocab(activeContext, keyToCompact, options);
 
                     // 12.8.9.3.
-                    final String indexKey = activeContext
-                            .getTerm(itemActiveProperty)
+                    final var indexKey = activeContext
+                            .findTerm(itemActiveProperty)
                             .map(TermDefinition::getIndexMapping)
                             .orElse(Keywords.INDEX);
 
@@ -654,70 +706,105 @@ public final class Compaction {
 
                     // 12.8.9.4.
                     if (container.contains(Keywords.LANGUAGE)
-                            && expandedItem.asJsonObject().containsKey(Keywords.VALUE)) {
+                            && expandedItem instanceof Map expandedItemMap
+                            && expandedItemMap.containsKey(Keywords.VALUE)) {
 
-                        if (JsonUtils.isObject(compactedItem)) {
-                            compactedItem = compactedItem.asJsonObject().get(Keywords.VALUE);
+                        if (compactedItem instanceof Map compactedItemMap) {
+                            compactedItem = compactedItemMap.get(Keywords.VALUE);
                         }
 
-                        if (expandedItem.asJsonObject().containsKey(Keywords.LANGUAGE)) {
-
-                            mapKey = expandedItem.asJsonObject().getString(Keywords.LANGUAGE);
+                        if (expandedItemMap.containsKey(Keywords.LANGUAGE)) {
+                            mapKey = (String) expandedItemMap.get(Keywords.LANGUAGE);
                         }
 
                         // 12.8.9.5.
                     } else if (container.contains(Keywords.INDEX)
+                            && expandedItem instanceof Map expandedItemMap
                             && Keywords.INDEX.equals(indexKey)) {
 
-                        if (expandedItem.asJsonObject().containsKey(Keywords.INDEX)) {
+                        if (expandedItemMap.containsKey(Keywords.INDEX)) {
 
-                            mapKey = expandedItem.asJsonObject().getString(Keywords.INDEX);
+                            mapKey = (String) expandedItemMap.get(Keywords.INDEX);
                         }
 
                         // 12.8.9.6.
-                    } else if (container.contains(Keywords.INDEX)
-                            && !Keywords.INDEX.equals(indexKey)) {
+                    } else if (container.contains(Keywords.INDEX) && !Keywords.INDEX.equals(indexKey)) {
 
                         // 12.8.9.6.1.
-                        containerKey = activeContext
-                                .uriCompaction()
-                                .vocab(true)
-                                .compact(activeContext.uriExpansion().expand(indexKey));
+                        containerKey = UriCompaction.withVocab(
+                                activeContext,
+                                UriExpansion.with(activeContext, options.loader(), runtime)
+                                        .expand(indexKey),
+                                options);
 
                         // 12.8.9.6.2.
-                        if (JsonUtils.containsKey(compactedItem, containerKey)) {
+                        if (compactedItem instanceof Map compactedItemMap
+                                && compactedItemMap.containsKey(containerKey)) {
 
-                            final JsonValue containerValue = compactedItem.asJsonObject().get(containerKey);
+                            final var containerValue = compactedItemMap.get(containerKey);
 
-                            if (JsonUtils.isString(containerValue)) {
-                                mapKey = ((JsonString) containerValue).getString();
-
-                                // 12.8.9.6.3.
-                                compactedItem = JsonProvider.instance().createObjectBuilder(compactedItem.asJsonObject()).remove(containerKey).build();
-
-                            } else if (JsonUtils.isArray(containerValue) && !JsonUtils.isEmptyArray(containerValue)) {
-
-                                mapKey = containerValue.asJsonArray().getString(0);
+                            if (containerValue instanceof String valueString) {
 
                                 // 12.8.9.6.3.
-                                if (containerValue.asJsonArray().size() > 1) {
+                                compactedItem = removeKey(compactedItemMap, containerKey);
+                                mapKey = valueString;
 
-                                    JsonValue containerKeyValue = null;
+                            } else if (containerValue instanceof Collection<?> listValue
+                                    && !listValue.isEmpty()) {
 
-                                    if (containerValue.asJsonArray().size() == 2) {
-                                        containerKeyValue = containerValue.asJsonArray().get(1);
+                                final var it = listValue.iterator();
 
-                                    } else {
-                                        containerKeyValue = JsonProvider.instance().createArrayBuilder(containerValue.asJsonArray()).remove(0).build();
-                                    }
+                                mapKey = (String) it.next();
 
-                                    compactedItem = JsonProvider.instance().createObjectBuilder(compactedItem.asJsonObject())
-                                            .remove(containerKey)
-                                            .add(containerKey, containerKeyValue)
-                                            .build();
+                                if (listValue.size() == 1) {
+
+                                    @SuppressWarnings("unchecked")
+                                    final var compactedMap = new LinkedHashMap<String, Object>(compactedItemMap);
+                                    compactedMap.remove(containerKey);
+
+                                    compactedItem = compactedMap;
 
                                 } else {
-                                    compactedItem = JsonProvider.instance().createObjectBuilder(compactedItem.asJsonObject()).remove(containerKey).build();
+
+                                    Object containerKeyValue;
+
+                                    if (listValue.size() == 2) {
+                                        containerKeyValue = it.next();
+
+                                    } else {
+                                        var list = new ArrayList<>(listValue.size() - 1);
+                                        it.forEachRemaining(list::add);
+                                        containerKeyValue = list;
+                                    }
+
+                                    compactedItem = replaceKey(
+                                            compactedItemMap,
+                                            containerKey,
+                                            containerKeyValue);
+
+//                                // 12.8.9.6.3.
+//                                if (listValue.size() > 1) {
+//
+//                                    
+//                                    var containerKeyValue = it.next();
+//
+//                                    if (it.hasNext()) {
+//                                    }
+
+//                                    if (listValue.size() == 2) {
+//                                        containerKeyValue = containerValue.asJsonArray().get(1);
+//
+//                                    } else {
+//                                        containerKeyValue = JsonProvider.instance().createArrayBuilder(containerValue.asJsonArray()).remove(0).build();
+//                                    }
+
+//                                    compactedItem = JsonProvider.instance().createObjectBuilder(compactedItem.asJsonObject())
+//                                            .remove(containerKey)
+//                                            .add(containerKey, containerKeyValue)
+//                                            .build();
+
+//                                } else {
+//                                    compactedItem = JsonProvider.instance().createObjectBuilder(compactedItem.asJsonObject()).remove(containerKey).build();
                                 }
                             }
                         }
@@ -725,79 +812,91 @@ public final class Compaction {
                         // 12.8.9.7.
                     } else if (container.contains(Keywords.ID)) {
 
-                        if (JsonUtils.containsKey(compactedItem, containerKey)) {
+                        if (compactedItem instanceof Map map && map.containsKey(containerKey)) {
 
-                            mapKey = compactedItem.asJsonObject().getString(containerKey);
+                            mapKey = (String) map.get(containerKey);
 
-                            compactedItem = JsonProvider.instance().createObjectBuilder(compactedItem.asJsonObject()).remove(containerKey).build();
+                            compactedItem = removeKey(map, containerKey);
                         }
 
                         // 12.8.9.8.
                     } else if (container.contains(Keywords.TYPE)) {
 
                         // 12.8.9.8.1.
-                        if (JsonUtils.containsKey(compactedItem, containerKey)) {
+                        if (compactedItem instanceof Map map && map.containsKey(containerKey)) {
+//                        if (JsonUtils.containsKey(compactedItem, containerKey)) {
 
-                            final JsonValue compactedKeyValue = compactedItem.asJsonObject().get(containerKey);
+                            final var compactedKeyValue = map.get(containerKey);
 
-                            if (JsonUtils.isNotNull(compactedKeyValue)) {
+                            if (compactedKeyValue != null) {
 
-                                final JsonArray compactedKeyArray = JsonUtils.toJsonArray(compactedKeyValue);
+                                final var compactedKeyArray = NativeAdapter.asCollection(compactedKeyValue);
 
-                                mapKey = compactedKeyArray.getString(0);
+                                var it = compactedKeyArray.iterator();
+
+                                mapKey = (String) it.next();
 
                                 if (compactedKeyArray.size() > 1) {
 
-                                    JsonValue compactedKeyArrayValue = null;
+                                    Object compactedKeyArrayValue = null;
+
                                     if (compactedKeyArray.size() == 2) {
 
-                                        compactedKeyArrayValue = compactedKeyArray.get(1);
+                                        compactedKeyArrayValue = it.next();
 
                                     } else {
-                                        compactedKeyArrayValue = JsonProvider.instance().createArrayBuilder(compactedKeyArray).remove(0).build();
+
+                                        var list = new ArrayList<>(compactedKeyArray.size() - 1);
+                                        it.forEachRemaining(list::add);
+                                        compactedKeyArrayValue = list;
+//                                                JsonProvider.instance().createArrayBuilder(compactedKeyArray).remove(0).build();
                                     }
 
-                                    compactedItem = JsonProvider.instance().createObjectBuilder(compactedItem.asJsonObject())
-                                            .remove(containerKey)
-                                            .add(containerKey, compactedKeyArrayValue)
-                                            .build();
+                                    compactedItem = replaceKey(map, containerKey, compactedKeyArrayValue);
 
                                 } else {
-                                    compactedItem = JsonProvider.instance().createObjectBuilder(compactedItem.asJsonObject()).remove(containerKey).build();
+                                    compactedItem = removeKey(map, containerKey);
                                 }
 
                             } else {
-                                compactedItem = JsonProvider.instance().createObjectBuilder(compactedItem.asJsonObject()).remove(containerKey).build();
+                                compactedItem = removeKey(map, containerKey);
                             }
                         }
 
                         // 12.8.9.8.4.
-                        if (JsonUtils.isObject(compactedItem) && compactedItem.asJsonObject().size() == 1) {
+                        if (compactedItem instanceof Map map && map.size() == 1) {
+//                        if (JsonUtils.isObject(compactedItem) && compactedItem.asJsonObject().size() == 1) {
 
-                            final String expandedKey = activeContext.uriExpansion().vocab(true).expand(compactedItem.asJsonObject().keySet().iterator().next());
+                            final var expandedKey = UriExpansion.with(activeContext, options.loader(), runtime)
+                                    .vocab(true)
+                                    .expand((String) map.keySet().iterator().next());
 
                             if (Keywords.ID.equals(expandedKey)) {
-
-                                JsonObject map = JsonProvider.instance().createObjectBuilder().add(Keywords.ID, expandedItem.asJsonObject().get(Keywords.ID)).build();
-
                                 compactedItem = Compaction
-                                        .with(activeContext)
-                                        .compact(itemActiveProperty, map);
+                                        .with(activeContext, options, runtime)
+                                        .compact(itemActiveProperty,
+                                                Map.of(
+                                                        Keywords.ID,
+                                                        ((Map) expandedItem).get(Keywords.ID)));
                             }
                         }
                     }
 
                     // 12.8.9.9.
                     if (mapKey == null) {
-                        mapKey = activeContext.uriCompaction().vocab(true).compact(Keywords.NONE);
+                        mapKey = UriCompaction.withVocab(activeContext, Keywords.NONE, options);
                     }
 
                     // 12.8.9.10.
-                    nestResult.getMapBuilder(itemActiveProperty).add(mapKey, compactedItem, asArray);
+                    LdAdapter.setOrAdd(
+                            (Map<String, Object>) nestResult.computeIfAbsent(itemActiveProperty, k -> new LinkedHashMap<String, Object>()),
+                            mapKey,
+                            compactedItem,
+                            asArray);
 
                     // 12.8.10.
                 } else {
-                    nestResult.add(itemActiveProperty, compactedItem, asArray);
+                    LdAdapter.setOrAdd(nestResult, itemActiveProperty, compactedItem, asArray);
                 }
 
                 if (nestResult != null && nestResultKey != null) {
@@ -807,6 +906,20 @@ public final class Compaction {
         }
 
         // 13.
-        return result.build();
+        return result;
+    }
+
+    @SuppressWarnings({ "rawtypes", "unchecked" })
+    private static Map<String, Object> removeKey(Map container, String key) {
+        final var compactedMap = new LinkedHashMap<String, Object>(container);
+        compactedMap.remove(key);
+        return compactedMap;
+    }
+
+    @SuppressWarnings({ "rawtypes", "unchecked" })
+    private static Map<String, Object> replaceKey(Map container, String key, Object value) {
+        final var compactedMap = new LinkedHashMap<String, Object>(container);
+        compactedMap.put(key, value);
+        return compactedMap;
     }
 }
