@@ -17,31 +17,23 @@ package com.apicatalog.jsonld.framing;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-import com.apicatalog.jsonld.JsonLdEmbed;
-import com.apicatalog.jsonld.JsonLdError;
-import com.apicatalog.jsonld.json.JsonMapBuilder;
-import com.apicatalog.jsonld.json.JsonProvider;
-import com.apicatalog.jsonld.json.JsonUtils;
+import com.apicatalog.jsonld.JsonLdException;
+import com.apicatalog.jsonld.lang.Embed;
 import com.apicatalog.jsonld.lang.Keywords;
-import com.apicatalog.jsonld.lang.ListObject;
-import com.apicatalog.jsonld.lang.NodeObject;
-import com.apicatalog.jsonld.lang.Utils;
-import com.apicatalog.jsonld.lang.ValueObject;
-
-import jakarta.json.JsonArrayBuilder;
-import jakarta.json.JsonObject;
-import jakarta.json.JsonString;
-import jakarta.json.JsonStructure;
-import jakarta.json.JsonValue;
+import com.apicatalog.jsonld.lang.LdAdapter;
+import com.apicatalog.tree.io.java.NativeAdapter;
 
 /**
  *
- * @see <a href="https://w3c.github.io/json-ld-framing/#framing-algorithm">Framing Algorithm</a>
+ * @see <a href=
+ *      "https://w3c.github.io/json-ld-framing/#framing-algorithm">Framing
+ *      Algorithm</a>
  *
  */
 public final class Framing {
@@ -50,14 +42,19 @@ public final class Framing {
     private final FramingState state;
     private final List<String> subjects;
     private final Frame frame;
-    private final JsonMapBuilder parent;
+    private final Map<String, Object> parent;
 
     private String activeProperty;
 
     // optional
     private boolean ordered;
 
-    private Framing(FramingState state, List<String> subjects, Frame frame, JsonMapBuilder parent, String activeProperty) {
+    private Framing(
+            FramingState state,
+            List<String> subjects,
+            Frame frame,
+            Map<String, Object> parent,
+            String activeProperty) {
         this.state = state;
         this.subjects = subjects;
         this.frame = frame;
@@ -68,7 +65,12 @@ public final class Framing {
         this.ordered = false;
     }
 
-    public static final Framing with(FramingState state, List<String> subjects, Frame frame, JsonMapBuilder parent, String activeProperty) {
+    public static final Framing with(
+            FramingState state,
+            List<String> subjects,
+            Frame frame,
+            Map<String, Object> parent,
+            String activeProperty) {
         return new Framing(state, subjects, frame, parent, activeProperty);
     }
 
@@ -77,62 +79,65 @@ public final class Framing {
         return this;
     }
 
-    public void frame() throws JsonLdError {
+    public void frame() throws JsonLdException {
 
         // 2.
-        final JsonLdEmbed embed = frame.getEmbed(state.getEmbed());
+        final var embed = frame.getEmbed(state.getEmbed());
 
-        final boolean explicit = frame.getExplicit(state.isExplicitInclusion());
+        final var isExplicit = frame.isExplicit(state.isExplicitInclusion());
 
-        final boolean requireAll = frame.getRequireAll(state.isRequireAll());
+        final var isRequireAll = frame.isRequireAll(state.isRequireAll());
 
         // 3.
-        final List<String> matchedSubjects =
-                                FrameMatcher
-                                    .with(state, frame, requireAll)
-                                    .match(subjects);
+        final var matchedSubjects = FrameMatcher
+                .with(state, frame, isRequireAll)
+                .match(subjects);
 
         // 4.
-        for (final String id : Utils.index(matchedSubjects, ordered)) {
+        final var ids = ordered
+                ? matchedSubjects.stream().sorted().iterator()
+                : matchedSubjects.iterator();
 
-            final Map<String, JsonValue> node = state.getGraphMap().get(state.getGraphName(), id);
+        while (ids.hasNext()) {
 
-            final String nodeId = JsonUtils.isString(node.get(Keywords.ID))
-                                ? ((JsonString)node.get(Keywords.ID)).getString()
-                                : null;
+            final var id = ids.next();
+
+            final var node = (Map<String, ?>) state.getGraphMap()
+                    .find(state.getGraphName(), id)
+                    .orElse(Map.of());
+
+            final var nodeId = node.get(Keywords.ID) instanceof String stringNodeId
+                    ? stringNodeId
+                    : null;
 
             // 4.1.
-            final JsonMapBuilder output = JsonMapBuilder.create();
-            output.put(Keywords.ID, JsonProvider.instance().createValue(id));
-
+            final var output = new LinkedHashMap<String, Object>();
+            output.put(Keywords.ID, id);
 
             if (activeProperty == null) {
                 state.clearDone();
             }
 
             // 4.2.
-            if (!state.isEmbedded() && state.isDone(id))  {
+            if (!state.isEmbedded() && state.isDone(id)) {
                 continue;
             }
 
             // 4.3.
             if (state.isEmbedded()
-                    && (JsonLdEmbed.NEVER == embed
-                            || state.isParent(nodeId)
-                            )
-
-                    ) {
-                addToResult(parent, activeProperty, output.build());
+                    && (Embed.NEVER == embed
+                            || state.isParent(nodeId))) {
+                addToResult(parent, activeProperty, output);
                 continue;
             }
 
             // 4.4.
             if (state.isEmbedded()
-                    && JsonLdEmbed.ONCE == embed
+                    && Embed.ONCE == embed
                     && state.isDone(id)
 
-                    ) {
-                addToResult(parent, activeProperty, output.build());
+            ) {
+                addToResult(parent, activeProperty, output);
                 continue;
             }
 
@@ -150,14 +155,14 @@ public final class Framing {
                     recurse = !Keywords.MERGED.equals(state.getGraphName());
                     subframe = Frame.EMPTY;
 
-                // 4.5.2.
                 } else {
+                    // 4.5.2.
                     recurse = !Keywords.MERGED.equals(id) && !Keywords.DEFAULT.equals(id);
 
-                    if (JsonUtils.isObject(frame.get(Keywords.GRAPH))
-                            || JsonUtils.isArray(frame.get(Keywords.GRAPH))
-                            ) {
-                        subframe = Frame.of((JsonStructure)frame.get(Keywords.GRAPH));
+                    final var graph = frame.get(Keywords.GRAPH);
+
+                    if (graph instanceof Map || graph instanceof Collection) {
+                        subframe = Frame.of(graph);
 
                     } else {
                         subframe = Frame.EMPTY;
@@ -173,12 +178,15 @@ public final class Framing {
                     graphState.setEmbedded(false);
 
                     Framing.with(
-                                graphState,
-                                new ArrayList<>(state.getGraphMap().get(id).map(Map::keySet).orElseGet(() -> Collections.emptySet())),
-                                subframe,
-                                output,
-                                Keywords.GRAPH
-                                )
+                            graphState,
+                            new ArrayList<>(
+                                    state.getGraphMap().find(id)
+                                            .or(() -> state.getGraphMap().find(state.getGraphName())) // <— fallback to current graph
+                                            .map(Map::keySet)
+                                            .orElse(Set.of())),
+                            subframe,
+                            output,
+                            Keywords.GRAPH)
                             .ordered(ordered)
                             .frame();
                 }
@@ -191,19 +199,27 @@ public final class Framing {
                 includedState.setEmbedded(false);
 
                 Framing.with(
-                            includedState,
-                            subjects,
-                            Frame.of((JsonStructure)frame.get(Keywords.INCLUDED)),
-                            output,
-                            Keywords.INCLUDED
-                            )
+                        includedState,
+                        subjects,
+                        Frame.of(frame.get(Keywords.INCLUDED)),
+                        output,
+                        Keywords.INCLUDED)
                         .ordered(ordered)
                         .frame();
             }
 
             // 4.7.
-            for (final String property : Utils.index(state.getGraphMap().properties(state.getGraphName(), id), ordered)) {
-                final JsonValue objects = state.getGraphMap().get(state.getGraphName(), id, property);
+            final var unsortedProps = state.getGraphMap().properties(state.getGraphName(), id);
+
+            final var properties = ordered
+                    ? unsortedProps.stream().sorted().iterator()
+                    : unsortedProps.iterator();
+
+            while (properties.hasNext()) {
+
+                final var property = properties.next();
+
+                final var objects = state.getGraphMap().get(state.getGraphName(), id, property);
 
                 // 4.7.1.
                 if (Keywords.contains(property)) {
@@ -212,100 +228,106 @@ public final class Framing {
                 }
 
                 // 4.7.2.
-                if (explicit && !frame.contains(property)) {
+                if (isExplicit && !frame.contains(property)) {
                     continue;
                 }
 
                 // 4.7.3.
-                for (final JsonValue item : JsonUtils.toCollection(objects)) {
+                for (final var item : NativeAdapter.asCollection(objects)) {
 
-                    JsonValue subframe = frame.get(property);
+                    var subframe = frame.get(property);
 
                     if (subframe == null) {
-                        subframe = JsonProvider.instance().createObjectBuilder()
-                                        .add(Keywords.EMBED, "@".concat(embed.name().toLowerCase()))
-                                        .add(Keywords.EXPLICIT, explicit)
-                                        .add(Keywords.REQUIRE_ALL, requireAll)
-                                        .build();
+                        subframe = Map.of(Keywords.EMBED, "@".concat(embed.name().toLowerCase()),
+                                Keywords.EXPLICIT, isExplicit,
+                                Keywords.REQUIRE_ALL, isRequireAll);
                     }
 
                     // 4.7.3.1.
-                    if (ListObject.isListObject(item)) {
+                    if (item instanceof Map itemMap && LdAdapter.isList(itemMap)) {
 
-                            JsonValue listFrameValue = null;
+                        Object listFrameValue = null;
 
-                            if (frame.contains(property)
-                                    && !JsonUtils.isEmptyArray(frame.get(property))
-                                    && JsonUtils.isObject(frame.get(property).asJsonArray().get(0))
-                                ) {
-                                listFrameValue = frame.get(property).asJsonArray().get(0).asJsonObject().get(Keywords.LIST);
-                            }
+                        var propertyValue = frame.get(property);
 
-                            if (listFrameValue == null) {
-                                listFrameValue = JsonProvider.instance().createObjectBuilder()
-                                        .add(Keywords.EMBED, "@".concat(embed.name().toLowerCase()))
-                                        .add(Keywords.EXPLICIT, explicit)
-                                        .add(Keywords.REQUIRE_ALL, requireAll)
-                                        .build();
-                            }
+                        if (propertyValue instanceof Collection array
+                                && !array.isEmpty()
+                                && array.iterator().next() instanceof Map map) {
+                            listFrameValue = map.get(Keywords.LIST);
+                        }
 
-                            final Frame listFrame = Frame.of((JsonStructure)listFrameValue);
+                        if (listFrameValue == null) {
+                            listFrameValue = Map.of(
+                                    Keywords.EMBED, "@".concat(embed.name().toLowerCase()),
+                                    Keywords.EXPLICIT, isExplicit,
+                                    Keywords.REQUIRE_ALL, isRequireAll);
+                        }
 
-                            final JsonArrayBuilder list = JsonProvider.instance().createArrayBuilder();
+                        final Frame listFrame = Frame.of(listFrameValue);
 
-                            for (final JsonValue listItem : JsonUtils.toCollection(item.asJsonObject().get(Keywords.LIST))) {
+                        final var list = new ArrayList<Object>();
 
-                                // 4.7.3.1.1.
-                                if (NodeObject.isNodeReference(listItem)) {
+                        for (final var listItem : NativeAdapter.asCollection(itemMap.get(Keywords.LIST))) {
 
-                                    FramingState listState = new FramingState(state);
-                                    listState.setEmbedded(true);
+                            // 4.7.3.1.1.
+                            if (LdAdapter.isReference(listItem)) {
 
+                                FramingState listState = new FramingState(state);
+                                listState.setEmbedded(true);
 
-                                    final JsonMapBuilder listResult = JsonMapBuilder.create();
+                                final var listResult = new LinkedHashMap<String, Object>();
 
-                                    Framing.with(
-                                                listState,
-                                                Arrays.asList(listItem.asJsonObject().getString(Keywords.ID)),
-                                                listFrame,
-                                                listResult,
-                                                Keywords.LIST)
-                                            .ordered(ordered)
-                                            .frame();
+                                @SuppressWarnings("unchecked")
+                                final var idMap = ((Map<String, String>) listItem).get(Keywords.ID);
 
-                                    if (listResult.containsKey(Keywords.LIST)) {
-                                        listResult.get(Keywords.LIST).ifPresent(list::add);
-                                    }
+                                Framing.with(
+                                        listState,
+                                        Arrays.asList(idMap),
+                                        listFrame,
+                                        listResult,
+                                        Keywords.LIST)
+                                        .ordered(ordered)
+                                        .frame();
+
+                                var existingList = listResult.get(Keywords.LIST);
+
+                                if (existingList != null) {
+                                    list.add(existingList);
+                                }
 
                                 // 4.7.3.1.2.
-                                } else {
-                                    list.add(listItem);
-                                }
+                            } else {
+                                list.add(listItem);
                             }
+                        }
 
-                            output.add(property, JsonProvider.instance().createObjectBuilder().add(Keywords.LIST, list));
+                        LdAdapter.setOrAdd(output, property, Map.of(Keywords.LIST, list));
 
-                    } else if (NodeObject.isNodeReference(item)) {
+                    } else if (LdAdapter.isReference(item)) {
 
                         FramingState clonedState = new FramingState(state);
                         clonedState.setEmbedded(true);
 
+                        @SuppressWarnings("unchecked")
+                        final var idMap = ((Map<String, String>) item).get(Keywords.ID);
+
                         Framing.with(
-                                    clonedState,
-                                    Arrays.asList(item.asJsonObject().getString(Keywords.ID)),
-                                    Frame.of((JsonStructure)subframe),
-                                    output,
-                                    property)
+                                clonedState,
+                                Arrays.asList(idMap),
+                                Frame.of(subframe),
+                                output,
+                                property)
                                 .ordered(ordered)
                                 .frame();
 
-                    } else if (ValueObject.isValueObject(item)) {
-                        if (Frame.of((JsonStructure)subframe).matchValue(item)) {
-                            output.add(property, item);
+                    } else if (item instanceof Map itemMap && LdAdapter.isValueNode(itemMap)) {
+
+                        if (Frame.of(subframe).matchValue(item)) {
+                            LdAdapter.setOrAdd(output, property, item);
                         }
 
                     } else {
-                        output.add(property, item);
+                        LdAdapter.setOrAdd(output, property, item);
                     }
                 }
             }
@@ -314,20 +336,18 @@ public final class Framing {
             for (String property : frame.keys()) {
                 if (output.containsKey(property)
                         || !Keywords.TYPE.equals(property) && Keywords.matchForm(property)
-                        || Keywords.TYPE.equals(property) && !frame.isDefaultObject(property)
-                        ) {
+                        || Keywords.TYPE.equals(property) && !frame.isDefaultObject(property)) {
                     continue;
                 }
 
                 // 4.7.4.2.
-                final JsonObject propertyFrame;
+                final Map<?, ?> propertyFrame;
 
-                if (JsonUtils.isNonEmptyArray(frame.get(property))) {
-                    propertyFrame = frame.get(property).asJsonArray().getJsonObject(0);
+                if (frame.get(property) instanceof Collection<?> array && !array.isEmpty()) {
+                    propertyFrame = (Map<?, ?>) array.iterator().next();
 
                 } else {
-                    propertyFrame = JsonValue.EMPTY_JSON_OBJECT;
-
+                    propertyFrame = Map.of();
                 }
 
                 // 4.7.4.3.
@@ -336,50 +356,56 @@ public final class Framing {
                 }
 
                 // 4.7.4.4.
-                JsonValue defaultValue = propertyFrame.get(Keywords.DEFAULT);
+                var defaultValue = propertyFrame.get(Keywords.DEFAULT);
 
-                if (JsonUtils.isNull(defaultValue)) {
-                    defaultValue = JsonProvider.instance().createValue(Keywords.NULL);
+                if (defaultValue == null) {
+                    defaultValue = Keywords.NULL;
                 }
 
-                output.add(property, JsonProvider.instance().createObjectBuilder()
-                                                    .add(Keywords.PRESERVE,
-                                                            JsonProvider.instance().createArrayBuilder().add(
-                                                            defaultValue)));
+                LdAdapter.setOrAdd(output, property, Map.of(Keywords.PRESERVE, defaultValue));
             }
 
             // 4.7.5. - reverse properties
             if (frame.contains(Keywords.REVERSE)) {
 
-                final JsonValue reverseObject = frame.get(Keywords.REVERSE);
+                final var reverseObject = frame.get(Keywords.REVERSE);
 
-                if (JsonUtils.isObject(reverseObject)) {
+                if (reverseObject instanceof Map<?, ?> map) {
 
-                    for (final String reverseProperty : reverseObject.asJsonObject().keySet()) {
+                    for (final var reverseEntry : map.entrySet()) {
 
-                        final Frame subframe = Frame.of((JsonStructure) reverseObject.asJsonObject().get(reverseProperty));
+                        final Frame subframe = Frame.of(map.get(reverseEntry.getValue()));
 
-                        final Set<String> subjectProperties = state.getReversePropertySubjects(state.getGraphName(), reverseProperty, id);
+                        final Set<String> subjectProperties = state.getReversePropertySubjects(state.getGraphName(), (String) reverseEntry.getKey(), id);
 
                         if (!subjectProperties.isEmpty()) {
 
-                            final JsonMapBuilder reverseResult = JsonMapBuilder.create();
+                            final var reverseResult = new LinkedHashMap<String, Object>();
 
                             final FramingState reverseState = new FramingState(state);
                             reverseState.setEmbedded(true);
 
                             Framing.with(
-                                            reverseState,
-                                            new ArrayList<>(subjectProperties),
-                                            subframe,
-                                            reverseResult,
-                                            null)
+                                    reverseState,
+                                    new ArrayList<>(subjectProperties),
+                                    subframe,
+                                    reverseResult,
+                                    null)
                                     .ordered(ordered)
                                     .frame();
 
-                            output
-                                    .getMapBuilder(Keywords.REVERSE)
-                                    .add(reverseProperty, reverseResult.valuesToArray());
+                            @SuppressWarnings("unchecked")
+                            var reverse = (Map<String, Object>) output.get(Keywords.REVERSE);
+
+                            if (reverse == null) {
+                                reverse = new LinkedHashMap<String, Object>();
+                                output.put(Keywords.REVERSE, reverse);
+                            }
+
+                            LdAdapter.setOrAdd(
+                                    reverse,
+                                    (String) reverseEntry.getKey(),
+                                    reverseResult.values());
                         }
                     }
                 }
@@ -388,16 +414,16 @@ public final class Framing {
             state.removeLastParent();
 
             // 4.8.
-            addToResult(parent, activeProperty, output.build());
+            addToResult(parent, activeProperty, output);
         }
     }
 
-    private static void addToResult(JsonMapBuilder result, String property, JsonValue value) {
+    private static void addToResult(Map<String, Object> result, String property, Object value) {
+
         if (property == null) {
             result.put(Integer.toHexString(result.size()), value);
-
-        } else {
-            result.add(property, value);
+            return;
         }
+        LdAdapter.setOrAdd(result, property, value);
     }
 }
